--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.username=travel agency
-spring.datasource.password=travel agency
+spring.datasource.username=root
+spring.datasource.password=mati95
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_agency
 spring.jpa.hibernate.ddl-auto=none
 spring.security.user.name=sda
