--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.username=root
-spring.datasource.password=mati95
-spring.datasource.url=jdbc:mysql://localhost:3306/travel_agency
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.password=Santana16
+spring.datasource.url=jdbc:mysql://localhost:3306/Travel
+spring.jpa.hibernate.ddl-auto=create
 spring.security.user.name=sda
 spring.security.user.password=test123
+spring.security.user.roles=USER
