--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.username=root
 spring.datasource.password=Santana16
 spring.datasource.url=jdbc:mysql://localhost:3306/Travel
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.security.user.name=sda
-spring.security.user.password=test123
-spring.security.user.roles=USER
+spring.security.user.password={noop}test123
+spring.security.user.roles=ADMIN
