--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.username=root
 spring.datasource.password=Santana16
 spring.datasource.url=jdbc:mysql://localhost:3306/Travel
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.security.user.name=sda
 #spring.security.user.password={noop}test123
 #spring.security.user.roles=ADMIN
