Działa Dodawanie Lotniska w MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.security.user.name=sda
 #spring.security.user.password={noop}test123
 #spring.security.user.roles=ADMIN
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
